--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Sebastiaan Jansen - DrSkunk",
-  "license": "ISC",
+  "license": "GPL3",
   "dependencies": {
     "follow-redirects": "^1.14.1",
     "googleapis": "^84.0.0",
