--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "acsm-to-epub",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Convert ACSM DRM file to Epub and upload it to Google Drive",
   "main": "index.js",
   "scripts": {
@@ -9,7 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Sebastiaan Jansen - DrSkunk",
-  "license": "GPL3",
+  "license": "GPLv3",
   "dependencies": {
     "follow-redirects": "^1.14.1",
     "googleapis": "^84.0.0",
